--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: node_js
 node_js: 
   - node
+deploy: 
+  provider: npm
+  email: 915854513@qq.com
+  api_key: 38b10c25-240a-431e-ac5a-47ec2c18c7e8
